# bazel_features

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  deps.bzl  features.bzl  globals.bzl
.bcr/: presubmit.yml
.github/workflows/: ci.yaml  publish.yaml  release.yml  release_prep.sh
private/: BUILD.bazel  common_settings.bzl  docs.bzl  extensions.bzl  globals.bzl  globals_repo.bzl  parse.bzl  repo.bzl  repos.bzl  util.bzl  version_repo.bzl
test/: BUILD.bazel  test.bzl
test/bcr_test/: MODULE.bazel  test.bzl
