load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "bzl_files",
    srcs = glob(["*.bzl"]) + [
        "//private:bzl_files",
        "@bazel_features_globals//:globals.bzl",
        "@bazel_features_version//:version.bzl",
    ],
    visibility = ["//visibility:public"],
)

exports_files(["features.bzl"])

bzl_library(
    name = "features",
    srcs = ["features.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//private:util",
        "@bazel_features_globals//:globals",
    ],
)
