module(
    name = "bazel_features",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.6.1")

version = use_extension("//private:extensions.bzl", "version_extension")
use_repo(version, "bazel_features_globals", "bazel_features_version")

bazel_dep(
    name = "stardoc",
    version = "0.8.0",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)
bazel_dep(
    name = "protobuf",
    version = "33.4",
    dev_dependency = True,
)
